--- a/config/my.cnf
+++ b/config/my.cnf
@@ -6,7 +6,14 @@
 port                           = 3306
 socket                         = /var/run/mysqld/mysqld.sock
 
+[mysqld_safe]
+socket          = /var/run/mysqld/mysqld.sock
+nice            = 0
+
 [mysqld]
+
+skip-host-cache
+skip-name-resolve
 
 # GENERAL #
 user                           = mysql
@@ -28,10 +35,10 @@ max-allowed-packet             = 100M
 max-connect-errors             = 1000000
 
 # DATA STORAGE #
-datadir                        = /data/mysql
+datadir                        = /var/lib/mysql
 
 # BINARY LOGGING #
-log-bin                        = /data/mysql/mysql-bin
+log-bin                        = /var/lib/mysql/mysql-bin
 expire-logs-days               = 14
 sync-binlog                    = 1
 
@@ -55,7 +62,7 @@ innodb-file-per-table          = 1
 innodb-buffer-pool-size        = 128M
 
 # LOGGING #
-log-error                      = /data/log/mysql/mysql-error.log
+log-error                      = /var/log/mysql/mysql-error.log
 log-queries-not-using-indexes  = 1
-slow-query-log                 = 0
-slow-query-log-file            = /data/log/mysql/mysql-slow.log
+slow-query-log                 = 1
+slow-query-log-file            = /var/log/mysql/mysql-slow.log
